# server/controller/tournament.controller.ts
@@ -1,6 +1,4 @@
 import { Router, NextFunction, Response, Request } from 'express';
-// Utils
-import chalk from 'chalk';
 // Core
 import { logger } from '../core/logger';
 import { asyncMiddleware, withAuth, withAdminRights, logController } from '../core/middleware';
@@ -10,7 +8,15 @@ import { listAll, findById, findByNameAndDate, parseBody, update } from '../mana
 import Tournament from '../entity/tournament.model';
 import { TournamentDTO } from '../../src/@common/dto';
 import { AppRequest } from './index';
-import { failure, success, unexpectedServerError } from './common.response';
+import { entityNotFound, failure, missingParameters, serverError, success } from './common.response';
+import { OmitHistory, OmitGeneric } from '../../src/@common/models/common.models';
+import {
+  FetchTournamentsResponse,
+  SaveTournamentRequest,
+  SaveTournamentResponse,
+  UpdateTournamentRequest,
+  UpdateTournamentResponse,
+} from '../../src/@common/models/tournament.model';
 
 // all API path must be relative to /api/v1/tournament
 const router = Router();
@@ -25,10 +31,10 @@ router.get(
   asyncMiddleware(async (req: AppRequest, res: Response, next: NextFunction) => {
     try {
       const tournamentsList = await listAll(req.user!);
-      return success(res, 'Tornei caricati...', 'Fetch complete.', { tournamentsList });
+      const additional: OmitGeneric<FetchTournamentsResponse> = { tournamentsList };
+      return success(res, 'Tornei caricati...', 'Fetch complete.', additional);
     } catch (err) {
-      logger.error(chalk.redBright('Error while fetching tournament ! : ', err));
-      return unexpectedServerError(res);
+      return serverError('GET tournament/list error : ', err, res);
     }
   })
 );
@@ -38,38 +44,44 @@ router.get(
   withAuth,
   asyncMiddleware(async (req: AppRequest, res: Response, next: NextFunction) => {
     try {
-      if (!req.params.tId) return res.status(500).json({ message: 'Invalid data' });
+      if (!req.params.tId) {
+        return missingParameters(res);
+      }
       const t = await findById(req.user!, parseInt(req.params.tId));
-      if (!t) return res.status(500).json({ message: 'Not found' });
-      return res.status(200).json(await findById(req.user!, parseInt(req.params.tId)));
+      if (!t) {
+        return entityNotFound(res);
+      }
+      const tournament = await findById(req.user!, parseInt(req.params.tId));
+      const additional: OmitGeneric<FetchTournamentsResponse> = { tournamentsList: [tournament] };
+      return success(res, 'Tornei caricati...', 'Fetch complete.', additional);
     } catch (err) {
-      logger.error(chalk.redBright('Error while fetching tournament ! : ', err));
-      return unexpectedServerError(res);
+      return serverError('GET tournament/{tId} error ! : ', err, res);
     }
   })
 );
 
 // PUT
 router.put(
-  '/',
+  '/update',
   withAuth,
   asyncMiddleware(async (req: AppRequest, res: Response, next: NextFunction) => {
     try {
-      const tournament = await update(req.user!, parseBody(req.body));
-      return success(res, 'Torneo salvato', 'Save complete', { tournament });
+      const tournament = await update(req.user!, parseBody(req.body as UpdateTournamentRequest));
+      const additional: OmitGeneric<UpdateTournamentResponse> = { tournament };
+      return success(res, 'Torneo salvato', 'Save complete', additional);
     } catch (err) {
-      return unexpectedServerError(res);
+      return serverError('PUT tournament/{tId} error ! : ', err, res);
     }
   })
 );
 
 // POST
 router.post(
-  '/',
+  '/new',
   withAuth,
   withAdminRights,
   asyncMiddleware(async (req: AppRequest, res: Response, next: NextFunction) => {
-    const model = parseBody(req.body);
+    const model = parseBody(req.body as OmitHistory<SaveTournamentRequest>);
     const user = req.user!;
     try {
       let t: Tournament | TournamentDTO | null = await findByNameAndDate(model.name, model.date, user);
@@ -80,9 +92,10 @@ router.post(
       model.ownerId = user.id;
       t = await Tournament.create(model);
       logger.info(`Created Tournament => ${t}`);
-      return success(res, 'Torneo salvato', 'Save complete', { tournament: t });
+      const additional: OmitGeneric<SaveTournamentResponse> = { tournament: t };
+      return success(res, 'Torneo salvato', 'Save complete', additional);
     } catch (err) {
-      return unexpectedServerError(res);
+      return serverError('POST tournament/{tId} error ! : ', err, res);
     }
   })
 );
